syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service Goods{
    //商品
    rpc GoodsList(GoodsFilterRequest) returns(GoodsListResponse); //獲取所有商品
    rpc BatchGetGoods(BatchGoodsIdInfo) returns(GoodsListResponse); //批量獲取所有商品
    rpc CreateGoods(CreateGoodsInfo) returns (GoodsInfoResponse); //新增商品
    rpc DeleteGoods(DeleteGoodsInfo) returns (google.protobuf.Empty); //刪除商品
    rpc UpdateGoods(CreateGoodsInfo) returns (google.protobuf.Empty); //更新商品
    rpc GetGoodsDetail(GoodInfoRequest) returns(GoodsInfoResponse); // 獲取商品資訊

    //商品分類
    rpc GetAllCategorysList(google.protobuf.Empty) returns(CategoryListResponse); //獲取所有的分類
    rpc GetSubCategory(CategoryListRequest) returns(SubCategoryListResponse);     //獲取子分類
    rpc CreateCategory(CategoryInfoRequest) returns(CategoryInfoResponse); // 新建分類資訊
    rpc DeleteCategory(DeleteCategoryRequest) returns(google.protobuf.Empty); // 删除分類
    rpc UpdateCategory(CategoryInfoRequest) returns(google.protobuf.Empty); //修改分類資訊

    //品牌
    rpc BrandList(BrandFilterRequest) returns(BrandListResponse); //批量取得品牌資訊
    rpc CreateBrand(BrandRequest) returns(BrandInfoResponse); //新增品牌
    rpc DeleteBrand(BrandRequest) returns(google.protobuf.Empty); //删除品排
    rpc UpdateBrand(BrandRequest) returns(google.protobuf.Empty); //修改品牌

    //輪播圖
    rpc BannerList(google.protobuf.Empty) returns(BannerListResponse); //獲取輪播圖資訊
    rpc CreateBanner(BannerRequest) returns(BannerResponse); //新增輪播圖
    rpc DeleteBanner(BannerRequest) returns(google.protobuf.Empty); //删除輪播圖
    rpc UpdateBanner(BannerRequest) returns(google.protobuf.Empty); //修改輪播圖

    //品牌分類
    rpc CategoryBrandList(CategoryBrandFilterRequest) returns(CategoryBrandListResponse); //獲取品牌與商品類別關係列表
    rpc GetCategoryBrandList(CategoryInfoRequest) returns(BrandListResponse);    //透過商品類別獲取品牌
    rpc CreateCategoryBrand(CategoryBrandRequest) returns(CategoryBrandResponse); //新增品牌與商品類別關係
    rpc DeleteCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty); //刪除品牌與商品類別關係
    rpc UpdateCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty); //更新品牌與商品類別關係
}

message CategoryListRequest {
    int32 id = 1;
    int32 level = 2;
}


message CategoryInfoRequest {
    int32 id = 1;
    string name = 2;
    int32 parentCategory = 3;
    int32 level = 4;
    bool isTab = 5;
}


message DeleteCategoryRequest {
    int32 id = 1;
}

message QueryCategoryRequest {
    int32 id = 1;
    string name = 2;
}

message CategoryInfoResponse {
    int32 id = 1;
    string name = 2;
    int32 parentCategory = 3;
    int32 level = 4;
    bool isTab = 5;
}

message CategoryListResponse {
    int32 total = 1;
    repeated CategoryInfoResponse data = 2;
    string jsonData = 3;
}

message SubCategoryListResponse {
    int32 total = 1;
    CategoryInfoResponse info = 2;
    repeated CategoryInfoResponse subCategorys = 3;
}



message CategoryBrandFilterRequest  {
    int32 pages = 1;
    int32 pagePerNums = 2;
}

message FilterRequest  {
    int32 pages = 1;
    int32 pagePerNums = 2;
}

message CategoryBrandRequest{
    int32 id = 1;
    int32 categoryId = 2;
    int32 brandId = 3;
}
message CategoryBrandResponse{
    int32 id = 1;
    BrandInfoResponse brand = 2;
    CategoryInfoResponse category = 3;
}

message BannerRequest {
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

message BannerResponse {
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

message BrandFilterRequest {
    int32 pages = 1;
    int32 pagePerNums = 2;
}

message BrandRequest {
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

message BrandInfoResponse {
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

message BrandListResponse {
    int32 total = 1;
    repeated BrandInfoResponse data = 2;
}

message BannerListResponse {
    int32 total = 1;
    repeated BannerResponse data = 2;
}

message CategoryBrandListResponse {
    int32 total = 1;
    repeated CategoryBrandResponse data = 2;
}



message BatchGoodsIdInfo {
    repeated int32 id = 1;
}


message DeleteGoodsInfo {
    int32 id = 1;
}

message CategoryBriefInfoResponse {
    int32 id = 1;
    string name = 2;
}

message CategoryFilterRequest {
    int32 id = 1;
    bool  isTab = 2;
}

message GoodInfoRequest {
    int32 id = 1;
}

message CreateGoodsInfo {
    int32 id = 1;
    string name = 2;
    string goodsSn = 3;
    int32 stocks = 7;
    float marketPrice = 8;
    float shopPrice = 9;
    string goodsBrief = 10;
    string goodsDesc = 11;
    bool shipFree = 12;
    repeated string images = 13;
    repeated string descImages = 14;
    string goodsFrontImage = 15;
    bool isNew = 16;
    bool isHot = 17;
    bool onSale = 18;
    int32 categoryId = 19;
    int32 brandId = 20;
}

message GoodsReduceRequest {
    int32 GoodsId = 1;
    int32 nums = 2;
}

message BatchCategoryInfoRequest {
    repeated int32 id = 1;
    int32 goodsNums = 2;
    int32 brandNums = 3;
}

message GoodsFilterRequest  {
    int32 priceMin = 1;
    int32 priceMax = 2;
    bool  isHot = 3;
    bool  isNew = 4;
    bool  isTab = 5;
    int32 topCategory = 6;
    int32 pages = 7;
    int32 pagePerNums = 8;
    string keyWords = 9;
    int32 brand = 10;
}


message GoodsInfoResponse {
    int32 id = 1;
    int32 categoryId = 2;
    string name = 3;
    string goodsSn = 4;
    int32 clickNum = 5;
    int32 soldNum = 6;
    int32 favNum = 7;
    float marketPrice = 9;
    float shopPrice = 10;
    string goodsBrief = 11;
    string goodsDesc = 12;
    bool shipFree = 13;
    repeated string images = 14;
    repeated string descImages = 15;
    string goodsFrontImage = 16;
    bool isNew = 17;
    bool isHot = 18;
    bool onSale = 19;
    int64 addTime = 20;
    CategoryBriefInfoResponse category = 21;
    BrandInfoResponse brand = 22;
}

message GoodsListResponse {
    int32 total = 1;
    repeated GoodsInfoResponse data = 2;
}
