syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";


service Inventory {
    rpc SetInv(GoodsInvInfo) returns(google.protobuf.Empty); //設置庫存
    rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo); // 獲取庫存資訊
    rpc Sell(SellInfo) returns (google.protobuf.Empty); //庫存扣減
    rpc Reback(SellInfo) returns(google.protobuf.Empty); //庫存歸還
}

message GoodsInvInfo {
    int32 goodsId = 1;
    int32 num = 2;
}

message SellInfo {
    repeated GoodsInvInfo goodsInfo = 1;
}